# ntprogressTestTask

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/stringOperations/: CMakeLists.txt  stringsOperations.h
src/: CMakeLists.txt  math.h  operations.h  stringsOperations.cpp  stringsOperations.h
tests/: CMakeLists.txt  catch.hpp  mathTest.cpp  normalizeTest.cpp  operationTest.cpp
